--- a/nada/index.html
+++ b/nada/index.html
@@ -234,7 +234,7 @@
         </div>
     </section>
 
-    <section class="py-20 border-t border-white/10">
+    <section class="py-20 border-t border-white/10" id="newsletter">
         <div class="max-w-5xl mx-auto px-6 flex flex-col md:flex-row items-center justify-between gap-8">
             <div class="text-left">
                 <h3 class="text-2xl text-white font-semibold mb-2 space-mono-regular">Stay in the loop</h3>
