chore: add link to appstore

--- a/nada/index.html
+++ b/nada/index.html
@@ -72,7 +72,7 @@
                 <img src="./img/logo.svg" alt="Nada Logo" class="h-8">
                 Nada
             </div>
-            <a href="#" class="text-sm font-medium text-gray-400 hover:text-white transition-colors">
+            <a href="https://apps.apple.com/us/app/nada-compose-with-hum/id6755638816" target="_blank" class="text-sm font-medium text-gray-400 hover:text-white transition-colors">
                 <img src="./img/download-appstore.svg" alt="Download on the App Store">
             </a>
         </div>
@@ -291,7 +291,7 @@
             <h2 class="text-3xl md:text-4xl font-semibold text-primary mb-8 tracking-tight space-mono-regular">
                 Capture the music in your head<br>before it fades away.
             </h2>
-            <a href="#" class="block rounded text-sm font-semibold mx-auto w-max focus:outline-none focus:ring-0">
+            <a href="https://apps.apple.com/us/app/nada-compose-with-hum/id6755638816" target="_blank" class="block rounded text-sm font-semibold mx-auto w-max focus:outline-none focus:ring-0">
                 <img src="img/download-appstore.svg" alt="Download on the App Store">
             </a>
             <p class="mt-12 text-xs text-gray-600">
